# redis-tics

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  windows-installer-notes.md
.github/workflows/: release.yml
docs/: CNAME  index.html  releases.json
scripts/: generate-icons.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  dmg-readme.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  redis_client.rs  types.rs
src/components/: AboutDialog.tsx  AddServerDialog.tsx  AnalyticsPanel.tsx  ClientsPanel.tsx  Dashboard.tsx  DatabaseAnalytics.tsx  EditServerDialog.tsx  KeyBrowser.tsx  MonitorPanel.tsx  RedisCLI.tsx  ServerInfoPanel.tsx  Sidebar.tsx  UpdateNotification.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  tabs.tsx
src/hooks/: useRedis.ts
src/lib/: utils.ts
src/types/: index.ts
