[package]
name = "redis-tics"
version = "1.0.0"
description = "A powerful Redis analytics and monitoring dashboard"
authors = ["Pritam <pritamsso@github.com>"]
license = "Apache-2.0"
repository = "https://github.com/pritamsso/redis-tics"
homepage = "https://github.com/pritamsso/redis-tics"
edition = "2021"
rust-version = "1.77.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
chrono = "0.4"
regex = "1"
dirs = "5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
